[gd_scene load_steps=3 format=3 uid="uid://b54uo5otbvimt"]

[ext_resource type="Script" uid="uid://1xgxtcrnhjnk" path="res://scenes/user_interface/module.gd" id="1_raokp"]
[ext_resource type="Texture2D" uid="uid://cj0iuo6vlnbsd" path="res://assets/module_icons/emptyslot.png" id="2_7vxq3"]

[node name="Module" type="PanelContainer"]
custom_minimum_size = Vector2(160, 160)
offset_right = 124.0
offset_bottom = 124.0
size_flags_vertical = 3
script = ExtResource("1_raokp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="IncreasePower" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "Q"

[node name="DecreasePower" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 10
text = "A"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Panel" type="ReferenceRect" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(96, 32)
layout_mode = 2
border_width = 0.0

[node name="ModuleSprite" type="TextureRect" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_7vxq3")

[node name="EnergyBar" type="ProgressBar" parent="HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 32)
layout_mode = 2
size_flags_vertical = 4
max_value = 6.0
value = 1.0
show_percentage = false

[node name="UpgradeBar" type="ProgressBar" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 96)
layout_mode = 2
size_flags_vertical = 4
max_value = 6.0
value = 1.0
fill_mode = 3
show_percentage = false
